--- a/SlideCreater/ViewControls/AssetItemControl.xaml
+++ b/SlideCreater/ViewControls/AssetItemControl.xaml
@@ -5,56 +5,93 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SlideCreater"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="1150">
-    <Grid Margin="5,5,5,5">
-        <Border BorderBrush="Black" BorderThickness="1,1,1,1">
-            <Viewbox Stretch="Uniform">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="100"></ColumnDefinition>
-                        <ColumnDefinition Width="100"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0" BorderThickness="1,1,1,1" BorderBrush="Black">
+             d:DesignHeight="150" d:DesignWidth="300">
+    <UserControl.Resources>
+        <Style TargetType="Button" x:Name="DarkBtn" x:Key="DarkBtn">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
                         <Grid>
-                            <Rectangle Stretch="Fill" Fill="{StaticResource BackgroundTileBrush}"></Rectangle>
+                            <Border Name="border" BorderBrush="#575757" BorderThickness="2">
+                                <ContentPresenter x:Name="contentpres" Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"></ContentPresenter>
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#676767" />
+                                <Setter Property="FontWeight" Value="Bold" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="False">
+                                <Setter TargetName="border" Property="Background" Value="#373737" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate> </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    <Grid Margin="5,5,5,5">
+        <Border Background="#272727" BorderBrush="#373737" BorderThickness="3">
+            <Viewbox Stretch="Uniform">
+                <Grid Width="300" Height="150">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"></RowDefinition>
+                        <RowDefinition Height="8*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="8*"></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Border Grid.Column="0" Grid.Row="1" BorderThickness="0" BorderBrush="Transparent">
+                        <Grid>
                             <Viewbox>
-                                <TextBlock Name="tbunloaded" Margin="5,5,5,5" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.4">Unloaded Asset</TextBlock>
+                                <Grid Background="#171717" Width="1000" Height="500">
+                                    <Rectangle Stretch="Fill">
+                                        <Rectangle.Fill>
+                                             <DrawingBrush TileMode="Tile" Viewport="0,0,32,32" ViewportUnits="Absolute">
+                                                <DrawingBrush.Drawing>
+                                                    <GeometryDrawing Geometry="M0,0 H1 V1 H2 V2 H1 V1 H0z" Brush="#272727"/>
+                                                </DrawingBrush.Drawing>
+                                            </DrawingBrush>
+                                        </Rectangle.Fill>
+                                    </Rectangle>
+                                </Grid>
+                            </Viewbox>
+                            <Viewbox>
+                                <TextBlock Name="tbunloaded" Margin="5,5,5,5" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Opacity="0.4">Unloaded Asset</TextBlock>
                             </Viewbox>
                             <Image Name="ImgAsset" Stretch="Uniform"></Image>
                             <MediaElement LoadedBehavior="Manual" Name="VideoAsset" StretchDirection="DownOnly" Stretch="Uniform"></MediaElement>
                         </Grid>
                     </Border>
-                    <Grid Grid.Column="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <!--<Viewbox Grid.Row="0" Stretch="Uniform">-->
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Name="AssetName" Margin="5,5,0,5" MaxWidth="65">Asset name
-                                <TextBlock.ToolTip>
-                                    <ToolTip>
-                                        <Label Name="ttName">Asset name</Label>
-                                    </ToolTip>
-                                </TextBlock.ToolTip>
-                            </TextBlock>
-                            <Button Click="ClickRenameAsset" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <Image Source="/ViewControls/Images/Pencil.png" Width="10" Height="10"></Image>
+                    <Grid Grid.Column="0" Grid.Row="0">
+                        <TextBlock Foreground="White" Name="AssetName" Margin="5,5,0,5" FontSize="15" TextTrimming="CharacterEllipsis">Asset Name
+                            <TextBlock.ToolTip>
+                                <ToolTip>
+                                    <Label Name="ttName">Asset name</Label>
+                                </ToolTip>
+                            </TextBlock.ToolTip>
+                        </TextBlock>
+                    </Grid>
+                    <Grid Grid.Row="0" Grid.Column="1">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Button Style="{StaticResource DarkBtn}" Click="ClickRenameAsset" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,5,0">
+                                <Image Source="/ViewControls/Images/PencilBlue.png" Width="20" Height="20"></Image>
                                 <Button.ToolTip>Rename Asset</Button.ToolTip>
                             </Button>
-                            <Button Click="ClickDeleteAsset" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <Image Source="/ViewControls/Images/Trash.png" Width="10" Height="10"></Image>
+                            <Button Style="{StaticResource DarkBtn}" Click="ClickDeleteAsset" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Image Source="/ViewControls/Images/TrashRed.png" Width="20" Height="20"></Image>
                                 <Button.ToolTip>Delete Asset</Button.ToolTip>
                             </Button>
                         </StackPanel>
-                        <!--</Viewbox>-->
+                    </Grid>
+                    <Grid Grid.Row="1" Grid.Column="1">
                         <Viewbox Grid.Row="1" Stretch="Uniform">
-                            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                            <StackPanel Grid.Row="1" Orientation="Vertical">
                                 <Label Name="lbbells" FontSize="10">
                                     <Hyperlink Click="ClickAddAsBells">
-                                        Add Bells 
+                                        Add Bells
                                     </Hyperlink>
-                                </Label> 
+                                </Label>
                                 <Label Name="lbinsert" FontSize="10">
                                     <Hyperlink Click="ClickFitInsert">
                                         Insert
