--- a/UIControls/LayoutDesigner.xaml
+++ b/UIControls/LayoutDesigner.xaml
@@ -6,14 +6,17 @@
         xmlns:local="clr-namespace:UIControls" xmlns:AvalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
         mc:Ignorable="d"
         Title="LayoutDesigner" Height="450" Width="800">
-    <Grid>
+    <Window.Resources>
+        
+    </Window.Resources>
+    <Grid Background="#272727">
         <Grid>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Background="#202020">
+                <Grid Grid.Row="0" Background="#171717">
                     <!--<StackPanel Orientation="Horizontal">-->
                     <!--<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
                             <Button Height="40" Width="80" Margin="10,0,0,0" Background="Orange">Overwrite</Button>
@@ -24,7 +27,7 @@
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10,0,0,0">
                         <Button Name="btn_save"  Click="Click_SaveAs" Height="40" Width="80" Margin="10,0,0,0" Background="Orange">Overwrite</Button>
                         <TextBlock VerticalAlignment="Center" Foreground="White" Margin="10,0,5,0">Name</TextBlock>
-                        <TextBox Name="tbName" MinWidth="200" Height="24" TextAlignment="Left" VerticalContentAlignment="Center" TextChanged="tbNameChanged"></TextBox>
+                        <TextBox Background="#272727" Foreground="White" Name="tbName" MinWidth="200" Height="24" TextAlignment="Left" VerticalContentAlignment="Center" TextChanged="tbNameChanged"></TextBox>
                         <TextBlock VerticalAlignment="Center" Foreground="White" Margin="20,0,5,0">Library</TextBlock>
                         <ComboBox Name="cbLibs" Height="30" Margin="10" MinWidth="200" VerticalContentAlignment="Center"></ComboBox>
                     </StackPanel>
@@ -35,17 +38,19 @@
                     </StackPanel>
                     <!--</StackPanel>-->
                 </Grid>
-                <Grid Grid.Row="1" Background="LightGray">
+                <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <AvalonEdit:TextEditor Name="TbJson" FontFamily="inconsolata" FontSize="13" TextChanged="SourceTextChanged" ShowLineNumbers="True" SyntaxHighlighting="JavaScript" Margin="10"></AvalonEdit:TextEditor>
+                    <Border BorderBrush="#373737" BorderThickness="3" Margin="10">
+                        <AvalonEdit:TextEditor Foreground="White" Background="#171717" Name="TbJson" FontFamily="cascadia" FontSize="13" TextChanged="SourceTextChanged" ShowLineNumbers="True" SyntaxHighlighting="JavaScript"></AvalonEdit:TextEditor>
+                    </Border>
                     <ScrollViewer Grid.Column="1">
                         <StackPanel>
                             <Grid>
                                 <Viewbox>
-                                    <Border Margin="10">
+                                    <Border Margin="10" BorderBrush="#373737" BorderThickness="10">
                                         <Grid>
                                             <Image Name="ImgMain" Panel.ZIndex="2"></Image>
                                             <Rectangle Panel.ZIndex="1">
@@ -75,7 +80,7 @@
 
                             <Grid>
                                 <Viewbox>
-                                    <Border Margin="10">
+                                    <Border Margin="10" BorderBrush="#373737" BorderThickness="10">
                                         <Grid>
                                             <Image Name="ImgKey" Panel.ZIndex="2"></Image>
                                             <Rectangle Panel.ZIndex="1">
