generate copy-title from LSB file update import options to use cb dialog add default assets to project

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -119,11 +119,8 @@
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator></Separator>
-                <MenuItem  Foreground="Black" Name="mi_importoption_inferpostset" Header="Add Postset To Slides" IsCheckable="True" IsChecked="True"></MenuItem>
-                <MenuItem  Foreground="Black" Name="mi_importoption_useupnextforhymns" Header="Use UpNext for Hymns" IsCheckable="True" IsChecked="False"></MenuItem>
-                <MenuItem  Foreground="Black" Name="mi_importoption_notonlyknowncaptions" Header="Add Unknown Captions" IsCheckable="True" IsChecked="False"></MenuItem>
-                <MenuItem  Foreground="Black" Name="mi_importoption_useresponsiveliturgy" Header="Use Responsive Liturgy" IsCheckable="True" IsChecked="False"></MenuItem>
-                <MenuItem  Foreground="Black" Name="mi_importoptions_chooseelements" Header="Filter Elements" Click="mi_importoptions_chooseelements_Click"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mi_importoptions_chooseelements" Header="Filter Elements..." Click="mi_importoptions_chooseelements_Click"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mi_importoptions_choosebehaviour" Header="Import Options..." Click="mi_importoptions_choosebehaviour_Click"></MenuItem>
                 <Separator></Separator>
                 <MenuItem  Foreground="Black" Name="miimport_adv" Click="ClickImportServiceAdv" Header="Import Wizard"></MenuItem>
             </MenuItem>
