--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -107,6 +107,9 @@
                 <Separator></Separator>
                 <MenuItem  Foreground="Black" Name="openTmpFolder" Click="OpenTempFolder" Header="View Temp Folder"></MenuItem>
             </MenuItem>
+            <MenuItem Header="Options">
+                <MenuItem Foreground="Black" Name="miRenderMode" Click="ClickRenderModeToggle" IsCheckable="True" IsChecked="false" Header="Parallel Rendering"></MenuItem>
+            </MenuItem>
             <MenuItem Header="Import">
                 <MenuItem  Foreground="Black" Name="miimport" Click="ClickImportService" Header="Import from LSB Service">
                     <MenuItem.Icon>
