option to render slides that haven't changed Detect changes via computing a hashcode of important stuff. Perhaps abusing json serialization

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -109,6 +109,7 @@
             </MenuItem>
             <MenuItem Header="Options">
                 <MenuItem Foreground="Black" Name="miRenderMode" Click="ClickRenderModeToggle" IsCheckable="True" IsChecked="false" Header="Parallel Rendering"></MenuItem>
+                <MenuItem Foreground="Black" Name="miRenderClean" Click="ClickRenderFromClean" IsCheckable="True" IsChecked="true" Header="Clean Pre-Render"></MenuItem>
             </MenuItem>
             <MenuItem Header="Import">
                 <MenuItem  Foreground="Black" Name="miimport" Click="ClickImportService" Header="Import from LSB Service">
