--- a/IntegratedPresenter/MediaPlayer2.xaml
+++ b/IntegratedPresenter/MediaPlayer2.xaml
@@ -20,7 +20,7 @@
         <Image Name="imagePlayer" Grid.RowSpan="2"></Image>
         <Rectangle Name="BlackSource" Fill="Black" Grid.RowSpan="2"></Rectangle>
         <Viewbox Grid.Row="1" Margin="10">
-            <StackPanel Orientation="Vertical">
+            <StackPanel Name="spActionView" Orientation="Vertical">
                 <TextBlock Name="SetupMessages" Foreground="LightGreen" Panel.ZIndex="10" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
                 <TextBlock Name="MainMessages" Foreground="Orange" Panel.ZIndex="10" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
             </StackPanel>
